<resources>
    <string name="app_name">AnimeApp</string>
    <string name="title_recommendation">Recommendation</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_description">Enable dark mode</string>
    <string name="title_detail">Detail</string>
    <string name="title_watch">Watch</string>
    <string name="title_logging">Logging</string>
    <string name="if_you_like">If you like…</string>
    <string name="then_you_might_like">…then you might like</string>
    <string name="read_more">Read More</string>
    <string name="type">"Type: "</string>
    <string name="status">"Status: "</string>
    <string name="source">"Source: "</string>
    <string name="episodes">"Episodes: "</string>
    <string name="released">"Released: "</string>
    <string name="aired">"Aired: "</string>
    <string name="approved_icon">"Approved Icon"</string>
    <string name="refresh_button">"Refresh Button"</string>
    <string name="season">"Season: "</string>
    <string name="studios">"Studios: "</string>
    <string name="genres">"Genres: "</string>
    <string name="producers">"Producers: "</string>
    <string name="licensors">"Licensors: "</string>
    <string name="broadcast">"Broadcast: "</string>
    <string name="duration">"Duration: "</string>
    <string name="rating">"Rating: "</string>
    <string name="synopsis">Synopsis</string>
    <string name="background">Background</string>
    <string name="score">Score</string>
    <string name="ranked">Ranked</string>
    <string name="popularity">Popularity</string>
    <string name="members">Members</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>
    <string name="watch">Watch</string>
    <string name="scored_by_users">%d Users</string>
    <string name="ranked_number">#%d</string>
    <string name="popularity_number">#%d</string>
    <string name="search_anime">Search Anime</string>
    <string name="filter">Filter</string>
    <string name="relation_name">Relation Name</string>
    <string name="entry_type">Entry Type</string>
    <string name="entry_name">Entry Type</string>
    <string name="relation">Relation</string>
    <string name="opening">Opening</string>
    <string name="ending">Ending</string>
    <string name="external">External</string>
    <string name="streaming">Streaming</string>
    <string name="three_dots">…</string>
    <string name="list">List</string>
    <string name="filter_anime">Filter Anime</string>
    <string name="apply">Apply</string>
    <string name="type_field">Type</string>
    <string name="score_field">Score</string>
    <string name="min_score_field">Min Score</string>
    <string name="max_score_field">Max Score</string>
    <string name="status_field">Status</string>
    <string name="rating_field">Rating</string>
    <string name="order_by_field">Order By</string>
    <string name="sort_field">Sort</string>
    <string name="letter_field">Letter</string>
    <string name="genres_field">Genres</string>
    <string name="producers_field">Producers</string>
    <string name="start_date_field">Start Date</string>
    <string name="end_date_field">End Date</string>
    <string name="include_unapproved_field">Include Unapproved</string>
    <string name="sfw_only_field">SFW Only</string>
    <string name="enable_date_range">Enable Date Range</string>
    <string name="chevron_down">Chevron Down</string>
    <string name="no_genres_found">No genres found</string>
    <string name="no_producers_found">No procuders found</string>
    <string name="retry">Retry</string>
    <string name="reset">Reset</string>
    <string name="search_producer">Search Producer</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="skip_outro">Skip Outro</string>
    <string name="list_episodes">Episodes</string>
    <string name="ep_number">Ep. number</string>
    <string name="jump">Jump</string>
    <string name="zero">0</string>
    <string name="total_episodes_0">Total Episodes: 0</string>
    <string name="search_episode">Search Episode</string>
    <string name="episode_title">Episode Title</string>
    <string name="pip_button">PIP Button</string>
    <string name="expand_button">Expand Button</string>
    <string name="current_episode">Eps. 0</string>
    <string name="sub">Sub :</string>
    <string name="dub">Dub :</string>
    <string name="raw">Raw :</string>
    <string name="subtitle_icon">Subtitle Icon</string>
    <string name="dubbing_icon">Dubbing Icon</string>
    <string name="server_name">Server Name</string>
    <string name="speed_up_icon">Speed Up Icon</string>
    <string name="previous_episode">Previous Episode</string>
    <string name="next_episode">Next Episode</string>
    <string name="restart_icon">Restart Icon</string>
    <string name="skip_previous_icon">Skip Previous Icon</string>
    <string name="skip_next_icon">Skip Next Icon</string>
    <string name="network_status">Network Status</string>
    <string name="cellular_off">Cellular Off</string>
    <string name="network_status_icon">Network Status Icon</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="error_loading_data">Error Loading Data</string>
    <string name="no_results_found">No results found.</string>
    <string name="cancel">Cancel</string>
</resources>